# Ti-Project-Assistant

./: .gitignore  LICENSE  README.md  README_EN.md  mspm0-init  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml
src/ti_project_assistant/: __init__.py  cli.py
